# lending-bot

./: .env.example  LICENSE  README.md  pyproject.toml
docs/: references.md
src/: main.py
src/config/: funding_offer.py  system.py
tests/unit_tests/: test_market_candle.py
