[tool.poetry]
name = "lending-bot"
version = "0.1.0"
description = ""
authors = ["ryanycw <ryan@ryanycw.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
bitfinex-api-py = "3.0.0b3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
